# nakara_skybound

./: .env.example  .gitignore  README.md  pyproject.toml
basic_workshop/: lesson_01_langgraph_with_openai.ipynb  lesson_02_langgraph_with_gemini.ipynb
game_workshop/: lesson_01_intro_to_langgraph.ipynb  lesson_02_game_state_management.ipynb  lesson_04_ai_npc_memory_strategy.ipynb
ml_workshop/: lesson_01_forecasting.ipynb
src/nakara_skybound/: main.py
src/nakara_skybound/game/: __init__.py  character.py  game_engine.py  magic_system.py  memory_system.py  narrative_engine.py  save_system.py  time_system.py  ui_manager.py  world.py
workshop/: lesson_01_intro_to_langgraph.ipynb  lesson_03_ai_npcs_and_dialogue.ipynb  lesson_05_mcp_llm_game.ipynb  lesson_06_mcp_ai_npc.ipynb
