[project]
name = "nakara-skybound"
version = "0.1.0"
description = ""
authors = [{ name = "Boyd BigDataRPG", email = "sorratat.s@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "openai (>=1.86.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "wikipedia-api (>=0.8.1,<0.9.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
]

[tool.poetry]
packages = [{ include = "nakara_skybound", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
